Changed so getShares returns an immutable list